--- a/screens/article/src/article.module.scss
+++ b/screens/article/src/article.module.scss
@@ -36,6 +36,12 @@
         padding: 4px 0;
     }
 
+    .main {
+        &.hasText {
+            margin-bottom: 30px;
+        }
+    }
+
     .visualContainer {
         position: absolute;
         z-index: -1;
@@ -61,8 +67,6 @@
     }
 
     .text {
-        margin-top: 2.5em;
-
         h2,
         h3,
         p,
